# prompt_raycast_ext

./: .coverage  .env.example  .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  ARCHIVOS_CREADOS.md  CLAUDE.md  DSPY_BACKEND_README.md  ESTADO_REAL_ACTUAL.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATIONS.md  QUICKSTART.md  README.md  VERIFICACION_FINAL.md  code-review-results.json  coverage.json  ecosystem.config.cjs  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup_dspy_backend.sh  start.cjs  test_generic_prompts.py
.claude/: session.md
.zed/: mcp-updated.json  mcp.json  settings.json  tasks.json
api/: __init__.py  circuit_breaker.py  exception_utils.py  main.py  metrics_api.py  prompt_history_api.py  prompt_improver_api.py  quality_gates.py  rate_limiter.py
config/: feature_flags.json
dashboard/: CLAUDE.md  CODE_ANALYSIS_REPORT.md  README.md  WIZARD_MODE_TESTING_CHECKLIST.md  WIZARD_MODE_VERIFICATION_SUMMARY.md  eslint.config.js  package-lock.json  package.json  raycast-env.d.ts  setup.sh  test_improve.ts  tsconfig.json  tsconfig.test.json  vitest.config.mts
datasets/: integration-test-cases.jsonl
docs/: ANALISIS_FABRIC_LLAMA31.md  AUDITORIA_DESCOPLAMIENTO.md  CONTRIB.md  PROMPT_ANALYSIS_CONVERTER.md  README.md  RUNBOOK.md  agent.md  analisis.md  api-error-handling.md  api-external-consumers.md  claude-guide.md  claude.md  features_future.md  features_future_analysis.md  integration-test-results.md  metrics-framework.md  mvp_fining.md  nlac-integration-complete.md  plan-claude-code-integration.md
eval/: __init__.py  quality-gates-comparison-5cases.json  sample-evaluation.json
examples/: README.md  metrics_ab_testing.py  metrics_basic_usage.py  metrics_query_analysis.py
hemdov/: CLAUDE.md  __init__.py  interfaces.py
models/: fewshot-compiled-v2.metadata.json  fewshot-compiled.json  fewshot-compiled.metadata.json  prompt_improver_fewshot.metadata.json
prompt_research/: HANDOFF.md  README.md
(+566 files in other folders)
