[project]
name = "raycast-dspy-backend"
version = "0.1.0"
description = "DSPy backend for Raycast prompt improver"
readme = "docs/backend/README.md"
requires-python = ">=3.10"
dependencies = [
  "aiosqlite>=0.19.0",
  "dspy-ai>=3.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "litellm>=1.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "typing-extensions>=4.0.0",
  "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "hypothesis>=6.100.0",
  "mypy>=1.19.1",
  "ruff>=0.14.11",
]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/**/*.py" = ["T20"] # Allow print in tests

[[tool.mypy.overrides]]
module = "dspy.*"
ignore_missing_imports = true
